--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.1.61</kotlin.version>
+        <kotlin.version>1.2.0</kotlin.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -43,6 +43,12 @@
             <groupId>org.optaplanner</groupId>
             <artifactId>optaplanner-core</artifactId>
             <version>7.4.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.optaplanner</groupId>
+            <artifactId>optaplanner-bom</artifactId>
+            <type>pom</type>
+            <scope>import</scope>
         </dependency>
     </dependencies>
 
